apps/backend/parking/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking
  namespace: backend
  labels:
    app: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking
  template:
    metadata:
      labels:
        app: parking
    spec:
      containers:
      - name: parking
        image: pablords/parking:0.0.1-SNAPSHOT
        command: [ "java", "-jar", "app.jar", "--spring.config.location=file:/app/config/application.yml" ]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/  # Diretório onde o application.yml será montado
      volumes:
      - name: config-volume
        configMap:
          name: parking-envs # Nome do ConfigMap
---

apiVersion: v1
kind: Service
metadata:
  name: parking
  namespace: backend
spec:
  selector:
    app: parking
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
