apps/backend/parking/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: parking
  namespace: backend
  labels:
    app: parking
spec:
  replicas: 2
  revisionHistoryLimit: 2  # Mantém apenas 3 revisões no histórico
  strategy:
    canary:
      stableService: parking-stable  # 🔥 Define o serviço estável
      steps:
      - setWeight: 20
      - pause: {duration: 10s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 100
  selector:
    matchLabels:
      app: parking
  template:
    metadata:
      labels:
        app: parking
    spec:
      containers:
      - name: parking
        image: pablords/parking:0.0.1-SNAPSHOT
        command: [ "java", "-jar", "app.jar", "--spring.config.location=file:/app/config/application.yml" ]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/  # Diretório onde o application.yml será montado
      volumes:
      - name: config-volume
        configMap:
          name: parking-envs # Nome do ConfigMap
---

apiVersion: v1
kind: Service
metadata:
  name: parking-stable
  namespace: backend
spec:
  selector:
    app: parking
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
