apps/backend/parking/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: parking
  namespace: backend
spec:
  hosts:
    - "lab.com.br" # Permitir tráfego externo de qualquer IP/Domínio
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /backend/parking/api/
      route:
        - destination:
            host: parking-stable
            port:
              number: 8080
          weight: 100
